style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  font-size: 62.5%;
  --default-border: 0.1rem solid rgba(0, 0, 0, 0.15);
  --default-border-radius: 1.2rem;
}

body {
  font-family: "Roboto", sans-serif;
  font-size: 1.4rem;
  overflow: hidden;
}

img {
  max-width: 100%; 
  min-width: 10rem;
  height: auto;
}

.content {
  display: grid;
  grid-template-areas:
    ". . . . ."
    ". pets . form ."
    ". pets . form ."
    ". . . . .";
  gap: 8.5rem;
}

main {
  grid-area: form;
}

aside {
  grid-area: pets;
}

aside h1 {
  font-size: 6.4rem;
  font-weight: 500;
  line-height: 7.5rem;
  text-align: center;
  padding: 2rem;
}

aside h1 span,
main h2 span {
  color: #ff5678;
}

main {
  width: 60rem;
  height: 52rem;
  border: var(--default-border);
  padding: 4.4rem 5.7rem;
  border-radius: var(--default-border-radius);
  position: relative;
}

main h2 {
  max-width: 43rem;
  font-size: 3.6rem;
  font-weight: 500;
}

main .actions {
  display: flex;
  flex-flow: column wrap;
}

main .actions a {
  border-radius: var(--default-border-radius);
  text-decoration: none;
  font-size: 2.4rem;
  height: 5.5rem;
  background-color: #35e6e9;
  color: #fff;

  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 5.4rem;
}

main .actions a + a {
  background-color: #ff5678;
  margin-top: 4.8rem;
}

main header {
  display: flex;
  align-items: center;
  gap: 1.8rem;
}

main header i {
  color: #ff5678;
  font-size: 2.4rem;
}

main footer p {
  margin-top: 8rem;
  font-size: 1.6rem;
}

main footer a {
  margin-top: 1rem;
  font-size: 1.8rem;
  display: block;
  text-align: center;
  color: #000;
}

main form label {
  margin-top: 1.6rem;
  display: block;
  font-size: 1.8rem;
  font-weight: 400;
  text-transform: lowercase;
  margin-bottom: 1rem;
}

main form :is(input, select) {
  width: 48.9rem;
  height: 5.5rem;
  background: #fff;
  border: var(--default-border);
  border-radius: var(--default-border-radius);
  text-transform: lowercase;
  padding: 1.2rem;
}

main form select {
  appearance: none;
}

main form .select-div {
  position: relative;
}

main form .select-div::after {
  top: 1.5rem;
  right: 1.5rem;
  content: "\f107";
  color: #35e6e9;
  font-family: "Font Awesome 6 Free";
  font-size: 2.2rem;
  font-weight: 600;
  position: absolute;
  z-index: 1;
}

main form .points {
  position: relative;
}

main form input + button {
  position: absolute;
  right: -4.2rem;
  top: calc(2.7rem + 2.5rem);
  background-color: transparent;
  border: none;
  color: #35e6e9;
  font-size: 2.4rem;
  cursor: pointer;
}

h3 {
  margin-top: 1.3rem;
  font-family: "Poppins", sans-serif;
  font-size: 1.9rem;
  font-weight: 600;
  text-align: center;
  text-transform: uppercase;
}

.cadastro-atuacao {
  text-align: center;
  font-family: "Poppins", sans-serif;
  font-size: 1.7rem;
  font-weight: 500;
  color: #ff5678;
  margin-bottom: 1.2rem;
}

